--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,174 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  margin-right: auto;
+  margin-left:  auto;
+  padding-right: 10px;
+  padding-left:  10px;
+  width: 1440px;
+  height: 900px;
   display: flex;
-  flex-direction: column;
+  flex-flow: column wrap;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  overflow:hidden;
+}
+
+.logo {
+  background-image: url("./assets/img/logo.png");
+  width: 278px;
+  height: 115px;
+  margin: 0 auto;
+  top: 256px;
+  position: relative;
+}
+
+.searchField {
+  width: 863px;
+  height: 46px;
+  top: 427px;
+  position: absolute;
+  margin: 0 auto;
+}
+
+.searchInput {
+  width: 709px;
+  height: 46px;
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  border-radius: 8px;
+  top: 427px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.searchButton {
+  width: 138px;
+  height: 46px;
+  top: 427px;
+  background: #204080;
+  border-radius: 8px;
   color: white;
+  margin-left: 16px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
 }
 
-.App-link {
-  color: #61dafb;
+.searchButton:hover {
+  background: #36599e;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.results {
+  position: relative;
+  width: 709px;
+  height: 258px;
+  top: 18px;
+  background: #FFFFFF;
+  border: 1px solid #484848;
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-sizing: border-box;
+  padding: 20px;
+  overflow: auto;
+}
+
+.results::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+.results::-webkit-scrollbar-track {
+  background: lightgray;
+}
+ 
+/* Handle */
+.results::-webkit-scrollbar-thumb {
+  background: linear-gradient(#9198e5, #204080); 
+}
+
+/* Handle on hover */
+.results::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(#204080, #9198e5);
+}
+
+.loading {
+  background-image: url("./assets/img/loading.svg");
+  height: 32px;
+  width: 32px;
+  position: absolute;
+  left: 50%;
+  -webkit-animation:spin 4s linear infinite;
+  -moz-animation:spin 4s linear infinite;
+  animation:spin 4s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+.results p {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+  color: #484848;
+  cursor: pointer;
+}
+
+.results span {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  color: #686868;
+}
+
+.header img {
+  position: absolute;
+  width: 149px;
+  height: 63px;
+  left: 37px;
+  top: 27px;
+}
+
+.fullSearch {
+  width: 50vw;
+  height: 46px;
+  margin-left: 15%;
+  top: 35px;
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  border-radius: 8px;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.fullSearchButton {
+  width: 138px;
+  height: 46px;
+  margin-left: 1%;
+  top: 35px;
+  background: #4F75C2;
+  border-radius: 8px;
+}
+
+.search {
+  font-family: Roboto;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.table {
+  position: relative;
+  top: 10vh;
+  width: 50%;
+  left: 15%;
 }
