--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 
 .wrapper {
   margin-right: auto;
-  margin-left:  auto;
+  margin-left: auto;
   padding-right: 10px;
-  padding-left:  10px;
+  padding-left: 10px;
   width: 1440px;
   height: 900px;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 .logo {
@@ -33,7 +33,7 @@
 .searchInput {
   width: 709px;
   height: 46px;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid #000000;
   box-sizing: border-box;
   border-radius: 8px;
@@ -66,7 +66,7 @@
   width: 709px;
   height: 258px;
   top: 18px;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid #484848;
   box-sizing: border-box;
   border-radius: 4px;
@@ -83,10 +83,10 @@
 .results::-webkit-scrollbar-track {
   background: lightgray;
 }
- 
+
 /* Handle */
 .results::-webkit-scrollbar-thumb {
-  background: linear-gradient(#9198e5, #204080); 
+  background: linear-gradient(#9198e5, #204080);
 }
 
 /* Handle on hover */
@@ -100,13 +100,26 @@
   width: 32px;
   position: absolute;
   left: 50%;
-  -webkit-animation:spin 4s linear infinite;
-  -moz-animation:spin 4s linear infinite;
-  animation:spin 4s linear infinite;
+  -webkit-animation: spin 4s linear infinite;
+  -moz-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
 }
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 
 .results p {
   font-family: Roboto;
@@ -140,7 +153,7 @@
   height: 46px;
   margin-left: 15%;
   top: 35px;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid #000000;
   box-sizing: border-box;
   border-radius: 8px;
@@ -153,7 +166,7 @@
   height: 46px;
   margin-left: 1%;
   top: 35px;
-  background: #4F75C2;
+  background: #4f75c2;
   border-radius: 8px;
 }
 
@@ -162,13 +175,54 @@
   font-style: normal;
   font-size: 18px;
   line-height: 21px;
-  color: #FFFFFF;
+  color: #ffffff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .table {
   position: relative;
-  top: 10vh;
-  width: 50%;
+  top: 7vh;
+  width: 55%;
   left: 15%;
+  height: 700px;
+  overflow: auto;
+}
+
+.sorter {
+  position: relative;
+  width: 90%;
+  text-align: right;
+  padding-top: 50px;
+  box-sizing: border-box;
+}
+
+.sorter select {
+  font-size: 15px;
+  font-weight: bold;
+  margin-right: 20%;
+  font-family: Roboto;
+  display: inline-block;
+  width: 10%;
+  cursor: pointer;
+  padding: 10px 10px;
+  outline: 0;
+  border: 0px solid #000000;
+  border-radius: 0px;
+  background: #ffffff;
+  color: #000000;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.sorter select::-ms-expand {
+  display: none;
+}
+.sorter select:hover,
+.sorter select:focus {
+  color: #000000;
+  background: #ffffff;
+}
+.sorter select:disabled {
+  opacity: 0.4;
+  pointer-events: none;
 }
