--- a/src/App.css
+++ b/src/App.css
@@ -182,7 +182,7 @@
 .table {
   position: relative;
   top: 7vh;
-  width: 55%;
+  width: 60%;
   left: 15%;
   height: 700px;
   overflow: auto;
@@ -225,4 +225,53 @@
 .sorter select:disabled {
   opacity: 0.4;
   pointer-events: none;
+}
+
+.pagination {
+  display: inline-block;
+  position: relative;
+  left: 7%;
+}
+
+.pagination span {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+  border-radius: 10px;
+}
+
+.pagination span.active {
+  background-color: #204080;
+  color: white;
+  border: 1px solid #204080;
+  border-radius: 10px;
+}
+
+.pagination span:hover:not(.active) {background-color: #ddd;}
+
+.nextButton {
+  color: black;
+  float: right;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+  border-radius: 10px;
+  display: block;
+  position: relative;
+  bottom: 4.5vh;
+  right: 10%;
+}
+
+.nextButton:hover {
+  background-color: #204080;
+  color: white;
+  border: 1px solid #204080;
+  cursor: pointer;
+  user-select: none;
 }
