--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,17 @@
   margin: 0 653px 0 509px;
 }
 
+.logoText {
+  width: 278px;
+  height: 115px;
+  top: 389px;
+  position: absolute;
+  margin: 0 474px 0 746px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: bold;
+}
+
 .searchField {
   width: 863px;
   height: 46px;
@@ -234,6 +245,12 @@
   pointer-events: none;
 }
 
+.sorter option {
+  font-size: 14px;
+  line-height: 16px;
+  font-family: Roboto;
+}
+
 .pagination {
   display: inline-block;
   position: relative;
@@ -249,6 +266,7 @@
   border: 1px solid #ddd;
   margin: 0 3px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .pagination span.active {
@@ -279,4 +297,14 @@
   border: 1px solid #204080;
   cursor: pointer;
   user-select: none;
+}
+
+.objects {
+  box-sizing: border-box;
+  padding: 5px;
+}
+
+.objects:hover {
+  background: #C4C4C4;
+  border-radius: 4px;
 }
